# ringinglib

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h  config.status  configure  configure.ac  fextent.dsp  gsiril.dsp  libtool  methsearch.dsp  mkdsp  psline.dsp  ringing-lib.dsw  ringing.dsp  ringingcore.dsp  stuff.dsp  test.dsp  testbase.dsp  testlibrary.dsp  testmusic.dsp  testprint.dsp  testproof.dsp  testsearch.dsp  testtouch.dsp
apps/: Makefile  Makefile.in
apps/fextent/: Makefile  Makefile.am  Makefile.in  fextent  fextent.cpp
apps/gsiril/: gsiril  (+25 more)
doc/: Makefile  Makefile.in  TODO  ringing-lib.info  ringing-lib.texi  stamp-vti  version.texi
examples/: Makefile  Makefile.am  Makefile.in  testbase  testbase.cpp  testlibrary  testlibrary.cpp  testmusic  testmusic.cpp  testprint  testprint.cpp  testproof  testproof.cpp  testsearch  testsearch.cpp  testtouch  testtouch.cpp
ringing/: Makefile  Makefile.am  Makefile.in  basic_search.cpp  basic_search.h  cclib.cpp  cclib.h  common-am.h  common-am.h.in  common-msvc.h  common.h  dimension.cpp  dimension.h  extent.cpp  extent.h  falseness.cpp  falseness.h  group.cpp  group.h  libfacet.cpp  libfacet.h  libout.cpp  libout.h  library.cpp  library.h  libringing.la  libringingcore.la  macros.h  method.cpp  method.h  mslib.cpp  mslib.h  multtab.cpp  multtab.h  music.cpp  music.h  pdf_fonts.cpp  pdf_fonts.h  peal.cpp  peal.h  (+26 more)
tests/: Makefile  Makefile.am  Makefile.in  change-test.cpp  method-test.cpp  music-test.cpp  row-test.cpp  test  test-base.cpp  test-base.h  test-main.cpp
(+38 files in other folders)
